--- a/namdar.html
+++ b/namdar.html
@@ -31,7 +31,21 @@
     </div>
     <div class="Line-1"></div>
 </header>
-      
-    
+<div class="box1">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</div>
+<div class="triangle-down"></div>
+<div class="top-text-up">
+    <div class="toptext1 toptext">رشد اجتماعی</div>
+    <div class="toptext2 toptext"><img src="image/img1.png" alt="image1"></div>
+    <div class="toptext3 toptext">بهبود کیفیت زندگی</div>
+    <div class="toptext4 toptext"><img src="image/img2.png" alt="image2"></div>
+</div>
+<div class="top-text-down">
+    <div class="toptext5 toptext"><img src="image/img3.png" alt="image1"></div>
+    <div class="toptext6 toptext">آموزه های برای بهتر شدن</div>
+    <div class="toptext7 toptext"><img src="image/img4.png" alt="image2"></div>
+    <div class="toptext8 toptext">و رشد فردی</div>
+</div>
+<div class="triangle-up"></div>
+<div class="box2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</div>
 </body>
 </html>
