finish top text

--- a/namdar.html
+++ b/namdar.html
@@ -38,6 +38,7 @@
     <div class="toptext2 toptext"><img src="image/img1.png" alt="image1"></div>
     <div class="toptext3 toptext">بهبود کیفیت زندگی</div>
     <div class="toptext4 toptext"><img src="image/img2.png" alt="image2"></div>
+    <div class="toptextimage"><img src="image/img5.png" alt="image5"></div>
 </div>
 <div class="top-text-down">
     <div class="toptext5 toptext"><img src="image/img3.png" alt="image1"></div>
@@ -47,5 +48,6 @@
 </div>
 <div class="triangle-up"></div>
 <div class="box2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</div>
+
 </body>
 </html>
