--- a/namdar.html
+++ b/namdar.html
@@ -48,6 +48,6 @@
 </div>
 <div class="triangle-up"></div>
 <div class="box2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</div>
-
+<div class="video-namdar"><img src="image/img6.png" alt="image6" width="1199px" height="648px"></div>
 </body>
 </html>
