add middle 3 and 4

--- a/namdar.html
+++ b/namdar.html
@@ -49,5 +49,80 @@
 <div class="triangle-up"></div>
 <div class="box2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</div>
 <div class="video-namdar"><img src="image/img6.png" alt="image6" width="1199px" height="648px"></div>
+<div class="main">
+    <div class="right-aside"></div>
+    <div class="main-aside">
+        <div class="top-middle1">لورم ایپسوم متن ساختگی</div>
+        <div class="middle1">
+            <div class="middle1-right">من یک مشاور فعال در حوزه‌ی کسب و کارهای کوچک هستم. باور دارم فارغ از نوع کسب و کار و زمینه‌ی موضوعی آن، پیروی از دانش مدیریت و پیاده‌سازی اصول و ارکان شاخه‌های گوناگون علوم کسب‌وکار می‌تواند همیشه، همه‌جا و در هر زمانی ضامن رشد و پیشرفت هر سازمانی باشد.</div>
+            <div class="middle1-left">همین باور هم اندیشه‌س مشاورانه‌‌ام را شکل داده‌است. من از این‌که در مسیر رشد کسب‌و‌کارها قرار بگیرم و شاهد حرکت آن‌ها از نقطه‌ای معلوم به نقطه‌ای بهتر و کارآمدتر باشم، لذت می‌برم.
+                در کنار کار مشاوره، بخشی از زمانم را صرف تولید محتوای آموزشی می‌کنم. آن‌چه شما در وب‌سایت یک‌پله‌بالاتر می‌بینید، نتیجه‌ی تلاش من در همین زمینه است. به تولید پادکست علاقه‌ی بسیار دارم. کاری که پایه‌های آن را به سختی و با لذت از تابستان 1393 محکم کرده‌ام. از نیمه سال 1399 تصمیم گرفتم بخشی از محتوای آموزشی‌ام را در کانال‌ یک‌پله‌بالاتر بر بستر یوتیوب منتشر کنم. همین هم هست که می‌توانم خودم را یک یوتیوبر حرفه‌ای معرفی نمایم.تلاش من بر این است که آموزش‌هایی ملموس، کاربردپذیر و نتیجه‌بخش در اختیار شما قرار دهم</div>
+        </div>
+        <div class="down-middle1">درباره من</div>
+        <div class="middle2"></div>
+        <div class="middle3">
+            <div class="middle3-right"><img src="image/img7.png" alt="image7"></div>
+            <div class="middle3-left">
+                <div class="middle3-left1">۰۱</div>
+                <div class="middle3-left2"></div>
+                <div class="middle3-left3">مشاوره های تک جلسه ای</div>
+                <div class="middle3-left4">کتابهای زیادی در شصت و سه درصد گذشته، حالکتابهای زیادی در شصت</div>
+                <div class="middle3-left5">نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد</div>
+                <div class="middle3-left6">شروع مشاوره</div>
+            
+            </div>
+        </div>
+        <div class="middle5"></div>
+        <div class="middle4">
+            <div class="middle4-right">
+                <div class="middle4-right1">۰۲</div>
+                <div class="middle4-right2"></div>
+                <div class="middle4-right3">مشاوره های تک جلسه ای</div>
+                <div class="middle4-right4">کتابهای زیادی در شصت و سه درصد گذشته، حالکتابهای زیادی در شصت</div>
+                <div class="middle4-left5">نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد</div>
+                <div class="middle4-right6">شروع مشاوره</div>
+        </div>
+        <div class="middle4-left"><img src="image/img8.png" alt=""></div>
+    </div>
+</div>
+<div class="left-aside"></div>
+<div class="main">
+    <div class="right-aside"></div>
+    <div class="main-aside">
+        <div class="top-middle1">لورم ایپسوم متن ساختگی</div>
+        <div class="middle1">
+            <div class="middle1-right">من یک مشاور فعال در حوزه‌ی کسب و کارهای کوچک هستم. باور دارم فارغ از نوع کسب و کار و زمینه‌ی موضوعی آن، پیروی از دانش مدیریت و پیاده‌سازی اصول و ارکان شاخه‌های گوناگون علوم کسب‌وکار می‌تواند همیشه، همه‌جا و در هر زمانی ضامن رشد و پیشرفت هر سازمانی باشد.</div>
+            <div class="middle1-left">همین باور هم اندیشه‌س مشاورانه‌‌ام را شکل داده‌است. من از این‌که در مسیر رشد کسب‌و‌کارها قرار بگیرم و شاهد حرکت آن‌ها از نقطه‌ای معلوم به نقطه‌ای بهتر و کارآمدتر باشم، لذت می‌برم.
+                در کنار کار مشاوره، بخشی از زمانم را صرف تولید محتوای آموزشی می‌کنم. آن‌چه شما در وب‌سایت یک‌پله‌بالاتر می‌بینید، نتیجه‌ی تلاش من در همین زمینه است. به تولید پادکست علاقه‌ی بسیار دارم. کاری که پایه‌های آن را به سختی و با لذت از تابستان 1393 محکم کرده‌ام. از نیمه سال 1399 تصمیم گرفتم بخشی از محتوای آموزشی‌ام را در کانال‌ یک‌پله‌بالاتر بر بستر یوتیوب منتشر کنم. همین هم هست که می‌توانم خودم را یک یوتیوبر حرفه‌ای معرفی نمایم.تلاش من بر این است که آموزش‌هایی ملموس، کاربردپذیر و نتیجه‌بخش در اختیار شما قرار دهم</div>
+        </div>
+        <div class="down-middle1">درباره من</div>
+        <div class="middle2"></div>
+        <div class="middle3">
+            <div class="middle3-right"><img src="image/img7.png" alt="image7"></div>
+            <div class="middle3-left">
+                <div class="middle3-left1">۰۱</div>
+                <div class="middle3-left2"></div>
+                <div class="middle3-left3">مشاوره های تک جلسه ای</div>
+                <div class="middle3-left4">کتابهای زیادی در شصت و سه درصد گذشته، حالکتابهای زیادی در شصت</div>
+                <div class="middle3-left5">نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد</div>
+                <div class="middle3-left6">شروع مشاوره</div>
+            
+            </div>
+        </div>
+        <div class="middle5"></div>
+        <div class="middle4">
+            <div class="middle4-right">
+                <div class="middle4-right1">۰۲</div>
+                <div class="middle4-right2"></div>
+                <div class="middle4-right3">مشاوره های تک جلسه ای</div>
+                <div class="middle4-right4">کتابهای زیادی در شصت و سه درصد گذشته، حالکتابهای زیادی در شصت</div>
+                <div class="middle4-left5">نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد</div>
+                <div class="middle4-right6">شروع مشاوره</div>
+        </div>
+        <div class="middle4-left"><img src="image/img8.png" alt=""></div>
+    </div>
+</div>
+<div class="left-aside"></div>
+</div>
 </body>
 </html>
