add middle9 first step

--- a/namdar.html
+++ b/namdar.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aylin namdar</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -71,10 +72,10 @@
                 <div class="middle3-left6">شروع مشاوره</div>
             
             </div>
-        </div>
-        <div class="middle5"></div>
-        <div class="middle4">
-            <div class="middle4-right">
+             </div>
+             <div class="middle5"></div>
+             <div class="middle4">
+             <div class="middle4-right">
                 <div class="middle4-right1">۰۲</div>
                 <div class="middle4-right2"></div>
                 <div class="middle4-right3">مشاوره های تک جلسه ای</div>
@@ -87,10 +88,16 @@
     <div class="middle6"></div>
     <div class="line3"></div>
     <div class="middle7"><img src="image/img9.png" alt=""></div>
-    <div class="middle8">
+    <div class="middle8"></div>
+    <div class="middle9">
+        <div class="middle9-right">
+            <div class="middle9-right1">کارگاه های آموزشی در حال برگزاری</div>
+            <div class="middle9-right2">چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</div>
+            <div class="middle9-right3">نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد</div>
+    
+        </div>  
     </div>
-</div>
-<div class="left-aside"></div>
+    <div class="left-aside"></div>
 </div>
 </body>
 </html>
