--- a/namdar.html
+++ b/namdar.html
@@ -97,7 +97,7 @@
     
         </div>  
     </div>
-    <div class="left-aside"></div>
+    <div class="leftaside"></div>
 </div>
 </body>
 </html>
