--- a/namdar.html
+++ b/namdar.html
@@ -94,8 +94,55 @@
             <div class="middle9-right1">کارگاه های آموزشی در حال برگزاری</div>
             <div class="middle9-right2">چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</div>
             <div class="middle9-right3">نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد</div>
-    
+            <div class="middle9-right4">
+                <span class="middle9-right4-right"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
+                </span>
+                <span class="middle9-right4-left"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i>
+                </span>
+            </div>
         </div>  
+        <div class="middle9-center">
+            <div class="middle9-center1"><img src="image/img10.png" alt="image10"></div>
+            <div class="middle9-center2">تفکر و مدیریت استراتژیک</div>
+            <div class="middle9-center3">نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت.</div>
+            <div class="middle9-center4">بیشتر بخوانید<i class="fa fa-long-arrow-left" aria-hidden="true"></i>
+            </div>
+        </div>
+        <div class="middle9-left">
+                <div class="middle9-left1"><img src="image/image11.png" alt="image10"></div>
+                <div class="middle9-left2">تفکر و مدیریت استراتژیک</div>
+                <div class="middle9-left3">نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت.</div>
+                <div class="middle9-left4">بیشتر بخوانید<i class="fa fa-long-arrow-left" aria-hidden="true"></i>
+                </div>
+            
+        </div>
+    </div>
+    <div class="middle10"></div>
+    <div class="middle11">کورس هاس سازمانی</div>
+    <div class="middle12">چاپگرها و متون بلکه روزنامه و<br> مجله در ستون و سطرآنچنان که لازم است</div>
+    <div class="middle13"></div>
+    <div class="middle14">
+        <div class="middle14-right">
+            <div class="middle14-right1"><img src="image/img12.png" alt="12"></div>
+            <div class="middle14-right2">رهبری و مدیریت کارمندان</div>
+            <div class="middle14-right3">صلح با خویشتن</div>
+            <div class="middle14-right4">نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص  و فرهنگ پیشرو در زبان فارسی ایجاد کرد</div>
+            <div class="middle14-right5">اطلاعات بیشتر<i class="fa fa-long-arrow-left" aria-hidden="true"></i></div>
+        </div>
+        <div class="middle14-center">
+            <div class="middle14-center1"><img src="image/img13.png" alt="12"></div>
+            <div class="middle14-center2">رهبری و مدیریت کارمندان</div>
+            <div class="middle14-center3">مدیر بی نظیر</div>
+            <div class="middle14-center4">نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص  و فرهنگ پیشرو در زبان فارسی ایجاد کرد</div>
+            <div class="middle14-center5">اطلاعات بیشتر<i class="fa fa-long-arrow-left" aria-hidden="true"></i></div>
+        </div>
+        <div class="middle14-left">
+            <div class="middle14-left1"><img src="image/img14.png" alt="12"></div>
+            <div class="middle14-left2">رهبری و مدیریت کارمندان</div>
+            <div class="middle14-left3">مدیر بی نظیر</div>
+            <div class="middle14-left4">نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص  و فرهنگ پیشرو در زبان فارسی ایجاد کرد</div>
+            <div class="middle14-left5">اطلاعات بیشتر<i class="fa fa-long-arrow-left" aria-hidden="true"></i></div>
+        </div>
     </div>
     <div class="leftaside"></div>
 </div>
