--- a/namdar.html
+++ b/namdar.html
@@ -144,6 +144,29 @@
             <div class="middle14-left5">اطلاعات بیشتر<i class="fa fa-long-arrow-left" aria-hidden="true"></i></div>
         </div>
     </div>
+    <div class="middle15"></div>
+    <div class="middle16">کورس های سازمانی </div>
+    <div class="middle17"></div>
+    <div class="middle18"></div>
+    <div class="middle19"><img src="image/img15.png" alt="15"></div>
+    <div class="middle20"></div>
+    <div class="middle21">معرفی کانال یوتیوب   |  YekPelleBalatar</div>
+    <div class="middle22">مرجع آموزش‌های کاربردی در حوزه مدیریت و کسب و کار</div>
+    <div class="middle23">ویدیوهای کانال یک پله بالاتر به شما کمک خواهد کرد بر چالشهای کسب و کارتان غلبه کرده و مهارتهای مدیریت کسب و کارتان را افزایش دهید. اگر صاحب کسب و کار کوچک هستید، این کانال برای شماست. حتماً همراه باشید.لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد. چاپگرها و متون بلکه روزنامه و مجله در ستون</div>
+    <div class="middle24">
+        <div class="middle24-right1">53.3K <br>نفر عضویت</div>
+        <div class="middle24-right2"></div>
+    <div class="middle24-center1">190 <br>محتوای ویدیوی</div>
+    <div class="middle24-center2"></div>
+    <div class="middle24-left">+ 4.3K <br>نفر مشاهده محتوا</div>
+    </div>
+    <div class="middle25"></div>
+    <div class="middle26">
+        <div class="middle26-right">عضویت در کانال</div>
+        <div class="middle26-left">ویدیو های رایگان<img src="image/img16.png" alt="16"></div>
+    </div>
+    <div class="middle27"></div>
+    <div class="middle28"></div>
     <div class="leftaside"></div>
 </div>
 </body>
