--- a/namdar.html
+++ b/namdar.html
@@ -166,7 +166,32 @@
         <div class="middle26-left">ویدیو های رایگان<img src="image/img16.png" alt="16"></div>
     </div>
     <div class="middle27"></div>
-    <div class="middle28"></div>
+    <div class="middle28">
+        <div class="middle28-right">
+            <div class="middle28-right1">پادکست ها</div>
+            <div class="middle28-right2">چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</div>
+            <div class="middle28-right3">نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد</div>
+            <div class="middle28-right4">
+                <span class="middle28-right4-right"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
+                </span>
+                <span class="middle28-right4-left"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i>
+                </span>
+            </div>
+        </div>
+        <div class="middle28-left">
+            <div class="middle28-left-right">
+                <img src="image/img17.png" alt="17">
+            </div>
+            <div class="middle28-left-left">
+                <div class="middle28-left-left1">جعبه ابزار موفقیت فردی</div>
+                <div class="middle28-left-left2">کتابهای زیادی در شصت و سه درصد</div>
+                <div class="middle28-left-left3">
+                    <div class="middle28-left-left3-right"></div>
+                </div>
+                <div class="middle28-left-left4"></div>
+            </div>
+        </div>
+    </div>
     <div class="leftaside"></div>
 </div>
 </body>
