--- a/namdar.html
+++ b/namdar.html
@@ -183,12 +183,17 @@
                 <img src="image/img17.png" alt="17">
             </div>
             <div class="middle28-left-left">
+                <div class="middle28-left-left-top">
                 <div class="middle28-left-left1">جعبه ابزار موفقیت فردی</div>
                 <div class="middle28-left-left2">کتابهای زیادی در شصت و سه درصد</div>
                 <div class="middle28-left-left3">
-                    <div class="middle28-left-left3-right"></div>
+                    <div class="middle28-left-left3-right"><i class="fa fa-microphone" aria-hidden="true"></i>آیدین نامدار</div>
+                    <div class="middle28-left-left3-center"><i class="fa fa-podcast" aria-hidden="true"></i>اپیزوت ۱۱</div>
+                    <div class="middle28-left-left3-left"><i class="fa fa-clock-o" aria-hidden="true"></i>۰۱:۰۸:۴۳</div>
                 </div>
-                <div class="middle28-left-left4"></div>
+                <div class="middle28-left-left4">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است .</div>
+                </div>
+                    <div class="line4"></div>
             </div>
         </div>
     </div>
